--- a/u2/Usuarios/tarjetas.html
+++ b/u2/Usuarios/tarjetas.html
@@ -1,10 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'Comunes/base.html' %}
+{% block contenido %}
+  <script src="https://kit.fontawesome.com/2530d1feb2.js" crossorigin="anonymous"></script>
+<h1>Añadir Tarjeta de credito/Debito</h1>
 
-</body>
-</html>
+<form class="TarjetasCuadro">
+        <div class="contenedor2">
+
+        <div >
+
+            <i class="fas fa-user-shield"></i>
+            <label >Propietario de la tarjeta</label>
+            <input type="text" name="PropietarioTarjeta" maxlength="50" required >
+        </div>
+
+        <div >
+             <i class="fab fa-cc-mastercard"></i>
+            <i class="fab fa-cc-visa"></i>
+            <label >Numero de la tarjeta</label>
+            <input type="number" name="NumeroTarjeta" maxlength="16" required>
+        </div>
+
+        <div >
+            <i class="fas fa-dollar-sign"></i>
+            <label >Saldo de la tarjeta</label>
+            <input type="number" name="Saldo" required>
+        </div>
+
+        <div >
+            <i class="fas fa-university"></i>
+            <label >Banco al que pertenece</label>
+            <input type="text" name="BancoP" required>
+        </div>
+
+        <div >
+            <label >Estatus en la que se encuentra A/B</label>
+            <input type="text" name="Estatus" maxlength="1" required>
+        </div>
+
+            <input type="submit" value="Registrar Tarjeta" class="button">
+
+  </div>
+
+</form>
+
+
+
+
+
+
+
+{% endblock %}
