--- a/u2/Usuarios/VerPerfil.html
+++ b/u2/Usuarios/VerPerfil.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'Comunes/base.html' %}
+{% block navbar %}
+{% include 'Comunes/Menu.html' %}
+{% endblock %}
+{% block contenido %}
+ <script src="https://kit.fontawesome.com/2530d1feb2.js" crossorigin="anonymous"></script>
+ <h1 >Hola "nombre del perfil del usuario"</h1>
 
-</body>
-</html>
+<form class="lista" action="/login" method="POST">
+<img src="../../static/img/carlos.png" class="fotoPerfil" alt="Cinque Terre">
+    <ul class="list-group">
+        <li class="list-group-item">Nombre Completo:asedyoagsduyga </li>
+        <li class="list-group-item">direccion:Asdasd</li>
+        <li class="list-group-item">telefono:123123123</li>
+        <li class="list-group-item">Email:123123123asdawdw@sasd</li>
+         <li class="list-group-item">tipo (Cliente/Empleado)</li>
+          <li class="list-group-item">Estatus: Cachondo</li>
+        <a href="/tarjetas" class="list-group-item">Tarjeta Registrada</a>
+        <p> <li class="list-group-item">Password:  ******</li><input  type="submit" value="Mostrar contraseña" class="Revelador" ></p>
+
+    </ul>
+
+</form>
+
+{% endblock %}
